Finish quote segment of landing page

--- a/index.html
+++ b/index.html
@@ -42,5 +42,25 @@
       <div class="box"></div>
       <div class="box"></div>
     </div>
+    <div class="box-text">
+      <div class="text-box">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      </div>
+      <div class="text-box">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      </div>
+      <div class="text-box">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      </div>
+      <div class="text-box">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      </div>
+    </div>
+    <div class="quote-segment">
+      <div class="quote">
+        <p>"This is a made up quote but it does look fancy at least..."</p>
+      </div>
+      <div class="signature">- Nicholas Packer</div>
+    </div>
   </body>
 </html>
