Finish landing page
completed section 4 of page with sign-up text and button
completed footer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet id
           laboriosam
         </p>
-        <button class="sign-up">Sign Up</button>
+        <button class="sign-up1">Sign Up</button>
       </div>
       <div class="top-image">
         <img
@@ -62,5 +62,21 @@
       </div>
       <div class="signature">- Nicholas Packer</div>
     </div>
+    <!-- 4th Segment of the page -->
+    <div class="call-action">
+      <div class="sign-up2">
+        <p class="sign-up-text">
+          <span style="font-weight: bold;">Sign up today guize!</span><br>
+          It is your imperative... Please sign up or else I won't be able to sell you things.
+        </p>
+        <button>Sign UP!</button>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="copyright">
+        <p>Copyright &copy; The Odin Project 2024</p>
+      </div>
+    </footer>
   </body>
 </html>
